# ProjectLMS

./: .coverage  .dockerignore  .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  groups.json  payments_test_data_fixture.json  pyproject.toml
config/: settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_300a7f43993f905c_0001_initial_py.html  z_300a7f43993f905c_0002_course_owner_lesson_owner_py.html  z_300a7f43993f905c_0003_subscription_py.html  z_300a7f43993f905c___init___py.html  z_e7c45762ecaa8ffb___init___py.html  z_e7c45762ecaa8ffb_admin_py.html  z_e7c45762ecaa8ffb_apps_py.html  z_e7c45762ecaa8ffb_models_py.html  z_e7c45762ecaa8ffb_paginators_py.html  z_e7c45762ecaa8ffb_serilizers_py.html  z_e7c45762ecaa8ffb_tests_py.html  z_e7c45762ecaa8ffb_urls_py.html  z_e7c45762ecaa8ffb_validators_py.html  z_e7c45762ecaa8ffb_views_py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serilizers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_fff39e3ca0aaeed4_0001_initial_py.html  z_fff39e3ca0aaeed4_0002_alter_customuser_city_py.html  z_fff39e3ca0aaeed4_0003_payments_py.html  z_fff39e3ca0aaeed4___init___py.html
(+27 files in other folders)
