[tool.poetry]
name = "projectlms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
django = "^5.2"
pillow = "^11.2.1"
ipython = "^9.2.0"
redis = "^6.2.0"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
 /(
 \.eggs # Исключить несколько общих каталогов
 | \.git # в корне проекта
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | dist
 )/
 | foo.py # Также отдельно исключить файл с именем foo.py
 # в корне проекта
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3
force_single_line = true
